--- a/views/partials/_baget.ejs
+++ b/views/partials/_baget.ejs
@@ -32,12 +32,13 @@
         </div>
 
         <input type="text" name="country" placeholder="Ýurt" value="Turkmenistan" class="checkoutInputs">
-        <input type="text" name="shipping_address1" placeholder="Welaýat" class="checkoutInputs">
-        <input type="text" name="shipping_address2" placeholder="Etrap" class="checkoutInputs">
-        <input type="text" name="city" placeholder="Şäher/Oba/Şäherçe" class="checkoutInputs">
+        <input type="text" name="state" placeholder="Welaýat" class="checkoutInputs">
+        <input type="text" name="city" placeholder="Şäher/Oba/Şäherçe/Etrap" class="checkoutInputs">
+        <input type="text" name="address_line_2" placeholder="Salgy" class="checkoutInputs">
+        <input type="text" name="address_line_1" placeholder="Salgy" class="checkoutInputs">
         <input type="text" name="zip" placeholder="Salgyňyzyň ZIP kody" class="checkoutInputs">
         <input type="tel" name="phone" placeholder="Telefon Belgi" class="checkoutInputs">
-        <input type="hidden" name="user" value="13">
+        <input type="hidden" name="user" value="7">
         <input type="submit" value="Sarga" class="bg-violet-800 text-white rounded-xl p-2">
     </form>
 </section>
