--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -56,7 +56,7 @@
     <%- include('./../partials/_baget') %>
 
     <!-- products page -->
-    <%-// include('./../partials/_products') %>
+    <%- include('./../partials/_products') %>
 
     <!-- Sign page -->
     <%- include('./../partials/_sign') %>
