--- a/views/partials/_sign.ejs
+++ b/views/partials/_sign.ejs
@@ -1,5 +1,7 @@
 <!-- dign section container -->
 <section id="signSection" class="fixed inset-0 hidden place-items-center bg-black/25 backdrop-blur-sm" style="perspective: 1000px;">
+    <!-- singwindow closer -->
+    <div class="absolute inset-0" onclick="signWindowClose()"></div>
     <form id="registerWindow" class="absolute gap-y-5 w-[90%] lg:w-2/5 grid bg-violet-400 p-12 rounded-lg items-start justify-stretch backface-hidden transition-all duration-1000" style="transform: rotateY(0deg); ">
         <input type="button" value="Öň hem ýazgyda" onclick="loginOrRegister()" class="bg-violet-800 text-white rounded-xl p-2">
         <div>
