--- a/public/css/main.css
+++ b/public/css/main.css
@@ -734,6 +734,10 @@ video {
   margin-top: 0px;
 }
 
+.mt-16 {
+  margin-top: 4rem;
+}
+
 .block {
   display: block;
 }
@@ -1041,6 +1045,11 @@ video {
   background-color: inherit;
 }
 
+.bg-red-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
+}
+
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
@@ -1223,6 +1232,10 @@ video {
 
 .duration-1000 {
   transition-duration: 1000ms;
+}
+
+a {
+  cursor: pointer;
 }
 
 .messagesZ {
