--- a/src/input.css
+++ b/src/input.css
@@ -39,6 +39,9 @@
 }
 @tailwind utilities;
 @layer utilities {
+    a{
+        @apply cursor-pointer
+    }
     .messagesZ{
         @apply z-50
     }
