--- a/views/partials/_sign.ejs
+++ b/views/partials/_sign.ejs
@@ -5,7 +5,9 @@
     <form id="registerWindow" class="absolute gap-y-5 w-[90%] lg:w-2/5 grid bg-violet-400 p-12 rounded-lg items-start justify-stretch backface-hidden transition-all duration-1000" style="transform: rotateY(0deg); ">
         <input type="button" value="Öň hem ýazgyda" onclick="loginOrRegister()" class="bg-violet-800 text-white rounded-xl p-2">
         <div>
-            <input type="checkbox" name="is_admin" id="is_admin"><label for="is_admin" class="text-white">Siz Telekeçimi</label>
+            <input type="radio" name="user_role" value="admin"><label for="is_admin" class="text-white">Admin</label>
+            <input type="radio" name="user_role" value="businessPerson"><label for="is_admin" class="text-white">Telekeçi</label>
+            <input type="radio" name="user_role" value="user"><label for="is_admin" class="text-white">Alyjy</label>
         </div>
         <input type="text" name="name" placeholder="Ulanyjy Ady" class="checkoutInputs">
         <input type="tel" name="phone" placeholder="Tel. Belgi" class="checkoutInputs">
