--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1108,6 +1108,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+
 .p-0 {
   padding: 0px;
 }
