--- a/public/css/main.css
+++ b/public/css/main.css
@@ -434,6 +434,10 @@ video {
   display: none;
 }
 
+.notLastChildHide > *:not(:last-child) {
+  display: none;
+}
+
 .checkoutInputs {
   border-radius: 0.375rem;
   padding: 0.5rem;
@@ -477,6 +481,7 @@ video {
 }
 
 .btn-add-to-cart {
+  cursor: pointer;
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 75ms;
@@ -1045,9 +1050,9 @@ video {
   background-color: inherit;
 }
 
-.bg-red-100 {
+.bg-red-400 {
   --tw-bg-opacity: 1;
-  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 
 .bg-red-500 {
@@ -1106,11 +1111,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-red-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 
 .p-0 {
