--- a/views/partials/_sign.ejs
+++ b/views/partials/_sign.ejs
@@ -5,19 +5,21 @@
     <form id="registerWindow" class="absolute gap-y-5 w-[90%] lg:w-2/5 grid bg-violet-400 p-12 rounded-lg items-start justify-stretch backface-hidden transition-all duration-1000" style="transform: rotateY(0deg); ">
         <input type="button" value="Öň hem ýazgyda" onclick="loginOrRegister()" class="bg-violet-800 text-white rounded-xl p-2">
         <div>
-            <input type="radio" name="user_role" value="admin"><label for="is_admin" class="text-white">Admin</label>
-            <input type="radio" name="user_role" value="businessPerson"><label for="is_admin" class="text-white">Telekeçi</label>
-            <input type="radio" name="user_role" value="user"><label for="is_admin" class="text-white">Alyjy</label>
+            <input type="radio" name="user_role" id="isBusiness" value="businessPerson"><label for="isBusiness" class="text-white">Telekeçi</label>
+            <input type="radio" name="user_role" id="isUser" value="user" checked><label for="isUser" class="text-white">Alyjy</label>
         </div>
         <input type="text" name="name" placeholder="Ulanyjy Ady" class="checkoutInputs">
         <input type="tel" name="phone" placeholder="Tel. Belgi" class="checkoutInputs">
         <input type="password" name="password" placeholder="Parol" class="checkoutInputs">
-        <input type="email" name="email" placeholder="Elektron Poşta" class="hidden checkoutInputs">
-        <input type="text" name="country" placeholder="Welaýat" class="hidden isAdminInputs checkoutInputs">
-        <input type="text" name="city" placeholder="Şäher/Oba/Etrap" class="hidden isAdminInputs checkoutInputs">
-        <input type="text" name="street" placeholder="Köçe" class="hidden isAdminInputs checkoutInputs">
-        <input type="text" name="apartment" placeholder="Bina" class="hidden isAdminInputs checkoutInputs">
-        <input type="text" name="zip" placeholder="ZIP kod" class="hidden isAdminInputs checkoutInputs">
+
+        <input type="email" name="email" placeholder="Elektron Poşta" class="hidden businessOnly checkoutInputs">
+        <input type="text" name="country" placeholder="Ýurt" class="hidden businessOnly checkoutInputs">
+        <input type="text" name="state" placeholder="Welaýat" class="hidden businessOnly checkoutInputs">
+        <input type="text" name="city" placeholder="Şäher/Oba/Etrap" class="hidden businessOnly checkoutInputs">
+        <input type="text" name="address_line_1" placeholder="Salgysy" class="hidden businessOnly checkoutInputs">
+        <input type="text" name="address_line_2" placeholder="Salgysy+" class="hidden businessOnly checkoutInputs">
+        <input type="text" name="zip" placeholder="ZIP kod" class="hidden businessOnly checkoutInputs">
+        <input type="text" name="business_name" placeholder="Kärhana ady" class="hidden businessOnly checkoutInputs">
         <input type="submit" value="Indiki" class="bg-violet-800 text-white rounded-xl p-2">
 
         <!-- code validation section -->
